src/db/snapshots/rust_debug_info__db__tests__address_to_line@aarch64-apple-darwin.snap
---
source: crates/rust_debug_info/src/db/tests.rs
expression: f
snapshot_kind: text
---
Some(
    ResolvedLocation {
        function: "function_call",
        file: "examples/simple-test/src/main.rs",
        line: 4,
    },
)
