src/db/snapshots/rust_debug_info__db__tests__lookup_function@aarch64-apple-darwin.snap
---
source: crates/rust_debug_info/src/db/tests.rs
expression: f
snapshot_kind: text
---
Some(
    Function {
        [salsa id]: Id(3c00),
        name: "function_call",
        linkage_name: "_ZN11simple_test13function_call17h04ab3b342a11111fE",
        base_address: 4294969792,
        function_body_address: 4294969812,
    },
)
