src/db/snapshots/rust_debug_info__db__tests__lookup_function@aarch64-unknown-linux-gnu.snap
---
source: crates/rust_debug_info/src/db/tests.rs
expression: f
snapshot_kind: text
---
Some(
    Function {
        [salsa id]: Id(3800),
        name: "function_call",
        linkage_name: "_ZN11simple_test13function_call17hc79f58c5e8047eacE",
        base_address: 25476,
        function_body_address: 25496,
    },
)
