src/db/snapshots/rust_debug_info__db__tests__lookup_function@x86_64-apple-darwin.snap
---
source: crates/rust_debug_info/src/db/tests.rs
expression: f
snapshot_kind: text
---
Some(
    Function {
        [salsa id]: Id(3c00),
        name: "function_call",
        linkage_name: "_ZN11simple_test13function_call17hb82f75af4622f83bE",
        base_address: 4294969392,
        function_body_address: 4294969407,
    },
)
